--- a/src/Flurl.Cmdlets/Flurl.Cmdlets.csproj
+++ b/src/Flurl.Cmdlets/Flurl.Cmdlets.csproj
@@ -40,12 +40,13 @@
       <PowerShellPath Condition="'$(PowerShellPath)' == ''">pwsh</PowerShellPath>
     </PropertyGroup>
     <Exec Command="$(PowerShellPath) -NonInteractive -Command &quot;
+      $version='$(Version)';
       if($version -match '(\d+\.\d+\.\d+)(-[a-zA-Z0-9\.]+)?') {
         $moduleVersion = $matches[1];
         $prerelease = if($matches[2]){$matches[2] -replace '[.-]'}else{$null};
-        Update-ModuleManifest -Path 'D:\src\github\PSFlurl\Flurl.psd1' -ModuleVersion $moduleVersion
+        Update-ModuleManifest -Path $(MSBuildThisFileDirectory)../../Flurl.psd1 -ModuleVersion $moduleVersion;
         if($prerelease) {
-          Update-ModuleManifest -Path 'D:\src\github\PSFlurl\Flurl.psd1' -Prerelease $prerelease
+          Update-ModuleManifest -Path $(MSBuildThisFileDirectory)../../Flurl.psd1 -Prerelease $prerelease
         }
       }&quot;" />
   </Target>
