--- a/src/Flurl.Cmdlets/Flurl.Cmdlets.csproj
+++ b/src/Flurl.Cmdlets/Flurl.Cmdlets.csproj
@@ -39,15 +39,6 @@
     <PropertyGroup>
       <PowerShellPath Condition="'$(PowerShellPath)' == ''">pwsh</PowerShellPath>
     </PropertyGroup>
-    <Exec Command="$(PowerShellPath) -NonInteractive -Command &quot;
-      $version='$(Version)';
-      if($version -match '(\d+\.\d+\.\d+)(-[a-zA-Z0-9\.]+)?') {
-        $moduleVersion = $matches[1];
-        $prerelease = if($matches[2]){$matches[2] -replace '[.-]'}else{$null};
-        Update-ModuleManifest -Path $(MSBuildThisFileDirectory)../../Flurl.psd1 -ModuleVersion $moduleVersion;
-        if($prerelease) {
-          Update-ModuleManifest -Path $(MSBuildThisFileDirectory)../../Flurl.psd1 -Prerelease $prerelease
-        }
-      }&quot;" />
+    <Exec Command='$(PowerShellPath) -NonInteractive -Command "$version=&apos;$(Version)&apos;; if($version -match &apos;(\d+\.\d+\.\d+)(-[a-zA-Z0-9\.]+)?&apos;) { $moduleVersion = $matches[1]; $prerelease = if($matches[2]){($matches[2]) -replace &apos;[.-]&apos;}else{$null}; Update-ModuleManifest -Path $(MSBuildThisFileDirectory)../../Flurl.psd1 -ModuleVersion $moduleVersion; if($prerelease) { Update-ModuleManifest -Path $(MSBuildThisFileDirectory)../../Flurl.psd1 -Prerelease $prerelease }}"' />
   </Target>
 </Project>
