--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -2,16 +2,12 @@ mode: ContinuousDeployment
 branches:
   main:
     regex: ^main$
-    tag: ''
     increment: Patch
-    track-merge-target: true
-    tracks-release-branches: true
     is-release-branch: true
   feature:
-    regex: ^feature?[/-]
-    tag: alpha
+    regex: ^features?[/-]
     increment: Inherit
     source-branches: ['main']
-ignore:
-  sha: []
-merge-message-formats: {}
+major-version-bump-message: '\+semver:\s?(breaking|major)'
+minor-version-bump-message: '\+semver:\s?(feature|minor)'
+patch-version-bump-message: '\+semver:\s?(fix|patch)'
