--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -8,17 +8,28 @@ jobs:
   publish-to-gallery:
     runs-on: ubuntu-latest
     steps:
-      - name: Download Release Package
-        uses: actions/download-artifact@v4
-        with:
-          name: nupkg
-          path: ./artifacts
+      - name: Debug Release Info
+        env:
+          RELEASE_INFO: ${{ toJSON(github.event.release) }}
+        run: |
+          echo "Release Tag: ${{ github.event.release.tag_name }}"
+          echo "Target Commitish: ${{ github.event.release.target_commitish }}"
+          echo "Full Release Info: $RELEASE_INFO"
       
-      # Disabled until we can get a PSGallery API key secret set up
-      # - name: Publish to PowerShell Gallery
-      #   env:
-      #     NUGET_KEY: ${{ secrets.POWERSHELLGALLERY_API_KEY }}
-      #   shell: pwsh
-      #   run: |
-      #     $nupkg = Get-ChildItem ./artifacts/*.nupkg | Select-Object -First 1
-      #     Publish-PSResource -Path $nupkg.FullName -ApiKey $env:NUGET_KEY -Repository PSGallery -Verbose
+      - name: Download Artifact from CI Run
+        uses: dawidd6/action-download-artifact@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          workflow: ci.yml
+          workflow_conclusion: success
+          commit: ${{ github.event.release.target_commitish }}
+          name: nupkg
+          path: artifacts
+
+      - name: Publish to PowerShell Gallery
+        env:
+          NUGET_KEY: ${{ secrets.POWERSHELLGALLERY_API_KEY }}
+        shell: pwsh
+        run: |
+          $nupkg = Get-ChildItem ./artifacts/*.nupkg | Select-Object -First 1
+          Publish-PSResource -Path $nupkg.FullName -ApiKey $env:NUGET_KEY -Repository PSGallery -Verbose
