GitVersion tag-prefix: 'v'

--- a/GitVersion.yml
+++ b/GitVersion.yml
@@ -11,3 +11,4 @@ branches:
 major-version-bump-message: '\+semver:\s?(breaking|major)'
 minor-version-bump-message: '\+semver:\s?(feature|minor)'
 patch-version-bump-message: '\+semver:\s?(fix|patch)'
+tag-prefix: 'v'
