--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,6 +11,13 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
+          ref: ${{ github.event.release.tag_name }}
+
+      - name: Ensure Detached HEAD
+        run: |
+          git checkout --detach
+          echo "Current state: $(git status)"
+          echo "Describe: $(git describe --tags)"
 
       - name: Debug Git Info
         run: |
