check out then git fetch --tags --force

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -11,20 +11,14 @@ jobs:
       - uses: actions/checkout@v4
         with:
           fetch-depth: 0
-          ref: ${{ github.event.release.tag_name }}
 
-      - name: Ensure Detached HEAD
+      - name: Fetch Tags and Checkout
         run: |
-          git checkout --detach
+          git fetch --tags --force
+          git checkout ${{ github.event.release.tag_name }}
           echo "Current state: $(git status)"
           echo "Describe: $(git describe --tags)"
-
-      - name: Debug Git Info
-        run: |
-          echo "Current branch: $(git branch --show-current)"
-          echo "Tags pointing at HEAD: $(git tag --points-at HEAD)"
-          echo "All tags: $(git tag -l)"
-          echo "Git describe: $(git describe --tags)"
+          echo "HEAD commitish: $(git rev-parse HEAD)"
 
       - name: Install GitVersion
         uses: gittools/actions/gitversion/setup@v0.10.2
