--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -3,8 +3,24 @@ name: CI
 on:
   push:
     branches: [ main ]
+    paths-ignore:
+      - '.vscode/**'
+      - '.devcontainer/**'
+      - 'tools/**'
+      - 'README.md'
+      - '.editorconfig'
+      - '.gitignore'
+      - 'LICENSE'
   pull_request:
     branches: [ main ]
+    paths-ignore:
+      - '.vscode/**'
+      - '.devcontainer/**'
+      - 'tools/**'
+      - 'README.md'
+      - '.editorconfig'
+      - '.gitignore'
+      - 'LICENSE'
   workflow_dispatch:
 
 permissions:
