--- a/.devcontainer/DockerFile
+++ b/.devcontainer/DockerFile
@@ -1,12 +1,12 @@
 # Use the official PowerShell image as a base
-FROM mcr.microsoft.com/powershell:latest
+FROM mcr.microsoft.com/devcontainers/dotnet
 
-# Install necessary dependencies
-RUN apt-get update && apt-get install -y \
-    curl \
-    git \
-    && apt-get clean \
-    && rm -rf /var/lib/apt/lists/*
+# # Install necessary dependencies
+# RUN apt-get update && apt-get install -y \
+#     curl \
+#     git \
+#     && apt-get clean \
+#     && rm -rf /var/lib/apt/lists/*
 
 # Set the default shell to PowerShell
 SHELL ["pwsh", "-Command"]
