--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,15 +53,14 @@ jobs:
           dotnet-version: '9.0.x'
       
       - name: Build and Pack
-        run: |
-          dotnet build src/PSFlurl/PSFlurl.csproj -c Release -p:Version=${{ steps.gitversion.outputs.semVer }}
-          dotnet pack src/PSFlurl/PSFlurl.csproj -c Release -p:Version=${{ steps.gitversion.outputs.semVer }} --output artifacts
+        run: ./build.ps1 -Version '${{ steps.gitversion.outputs.semVer }}'
+        shell: pwsh
       
       - name: Upload Package Artifact
         uses: actions/upload-artifact@v4
         with:
           name: nupkg
-          path: ./artifacts/*.nupkg
+          path: ./PSFlurl/PSFlurl*.nupkg
           retention-days: 5
 
   test:
@@ -81,13 +80,13 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: nupkg
-          path: artifacts
+          path: PSFlurl
 
       - name: Extract Module
         shell: pwsh
         run: |
-          $nupkg = Get-ChildItem ./artifacts/*.nupkg
-          $extractPath = Join-Path ./artifacts 'PSFlurl'
+          $nupkg = Get-ChildItem ./PSFlurl/*.nupkg
+          $extractPath = Join-Path ./PSFlurl 'PSFlurl'
           Expand-Archive -Path $nupkg -DestinationPath $extractPath
           Write-Host "Extracted module to: $extractPath"
       
@@ -100,9 +99,9 @@ jobs:
         shell: pwsh
         run: |
           Import-Module Pester -Force -PassThru
-          Import-Module ./artifacts/PSFlurl/PSFlurl.psd1 -Force -Verbose
+          Import-Module ./PSFlurl/PSFlurl/PSFlurl.psd1 -Force -Verbose
           $config = [PesterConfiguration]::Default
-          $config.Run.Path = './PSFlurl.Tests.ps1'
+          $config.Run.Path = './tests/PSFlurl.Tests.ps1'
           $config.Output.Verbosity = 'Detailed'
           $config.Run.PassThru = $true
           Invoke-Pester -Configuration $config
@@ -117,14 +116,14 @@ jobs:
         uses: actions/download-artifact@v4
         with:
           name: nupkg
-          path: artifacts
+          path: PSFlurl
 
       - name: Create Release
         shell: pwsh
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
-          $nupkg = Get-ChildItem ./artifacts/PSFlurl.*.nupkg
+          $nupkg = Get-ChildItem ./PSFlurl/PSFlurl.*.nupkg
           $version = $nupkg.BaseName -replace 'PSFlurl\.'
           Write-Host "Version: $version"
           $secureToken = $env:GH_TOKEN | ConvertTo-SecureString -AsPlainText -Force
@@ -161,4 +160,4 @@ jobs:
         env:
           NUGET_KEY: ${{ secrets.POWERSHELLGALLERY_API_KEY }}
         run: |
-          dotnet nuget push ./artifacts/*.nupkg --api-key ${{ env.NUGET_KEY }} --source https://www.powershellgallery.com/api/v2/package
+          dotnet nuget push ./PSFlurl/*.nupkg --api-key ${{ env.NUGET_KEY }} --source https://www.powershellgallery.com/api/v2/package
