--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -53,7 +53,7 @@ jobs:
           dotnet-version: '9.0.x'
       
       - name: Build and Pack
-        run: ./build.ps1 -Version '${{ steps.gitversion.outputs.semVer }}'
+        run: ./build.ps1 -Configuration Release -Version '${{ steps.gitversion.outputs.semVer }}'
         shell: pwsh
       
       - name: Upload Package Artifact
